--- a/Python_basico.ipynb
+++ b/Python_basico.ipynb
@@ -15,7 +15,7 @@
         "jRIYxXTw4OXH",
         "TrE-jl_1vfzK"
       ],
-      "authorship_tag": "ABX9TyPo3aSaA/+l/j/NDW0hDV2C",
+      "authorship_tag": "ABX9TyMjcClg1wixPpFZPYAm64U3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1850,9 +1850,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N4-AlDxJ0XYu",
-        "outputId": "992ee7f5-3815-4a93-a3a0-a3cc9f8cd365"
+        "outputId": "910b8870-96ee-408c-b0ad-53153c060e2a"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2042,9 +2042,11 @@
         "print(\"\\nNota promedio por edad:\")\n",
         "print(promedio_por_edad)\n",
         "\n",
-        "plt.figure(figsize=(8, 5))\n",
+        "plt.figure(figsize=(8, 5)) #figsize=(8, 5): Es un argumento que establece el tamaño de la figura.\n",
+        "                            # El primer número, 8, es el ancho y el segundo, 5, es la altura, ambos medidos en pulgadas.\n",
+        "\n",
         "# Código recomendado para evitar la advertencia:\n",
-        "sns.barplot(x='Edad', y='Nota', data=promedio_por_edad, palette='coolwarm', hue='Edad', legend=False)\n",
+        "sns.barplot(x='Edad', y='Nota', data=promedio_por_edad, palette='coolwarm', hue='Edad', legend= False) #indicando los nombres de los ejes\n",
         "plt.title('Nota Promedio por Edad')\n",
         "plt.xlabel('Edad')\n",
         "plt.ylabel('Nota Promedio')\n",
@@ -2056,9 +2058,9 @@
           "height": 609
         },
         "id": "F6mme-BO2of5",
-        "outputId": "d511481a-ef73-4bed-a73f-274c6ef72651"
+        "outputId": "b7aa2098-1eb7-486e-c947-5ed35c94eff8"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -2219,9 +2221,9 @@
           "height": 582
         },
         "id": "kGxexcyC4SP4",
-        "outputId": "dca4d45f-a7cb-4e0d-c053-f82421c6c335"
+        "outputId": "110853b1-286d-4b2d-ffd1-100297948ce7"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
